# drm

./: Makefile.sources  core-symbols.txt  libsync.h  meson.build  meson_options.txt  symbols-check.py  util_math.h  xf86drm.c  xf86drm.h  xf86drmMode.c
amdgpu/: amdgpu-symbols.txt  amdgpu.h  amdgpu_asic_id.c  amdgpu_bo.c  amdgpu_cs.c  amdgpu_device.c  amdgpu_gpu_info.c  amdgpu_userq.c  amdgpu_vamgr.c  handle_table.c  meson.build
data/: amdgpu.ids
exynos/: exynos_fimg2d.c
freedreno/: freedreno_bo_cache.c
freedreno/kgsl/: kgsl_bo.c  kgsl_ringbuffer.c
freedreno/msm/: msm_ringbuffer.c
include/drm/: amdgpu_drm.h  drm.h  drm_mode.h  i915_drm.h  nvidia_drm.h
include/uapi/sunos/: drm.h  i915_drm.h
intel/: test_decode.c
man/: drm-memory.7.rst
nvidia/: Android.mk  Makefile.sources  libdrm_nvidia.pc.in  meson.build  nvidia-symbols.txt  nvidia.c  nvidia.h
omap/: omap_drm.c
radeon/: r600_pci_ids.h  radeon_surface.c
tests/: drmdevice.c  meson.build
tests/amdgpu/: amdgpu_stress.c  amdgpu_test.c  amdgpu_test.h  basic_tests.c  bo_tests.c  cp_dma_tests.c  cs_tests.c  jpeg_tests.c  meson.build  userq_test.c  uvd_enc_tests.c  vce_tests.c  vcn_tests.c
tests/modetest/: buffers.c
tests/nouveau/: threaded.c
tests/util/: format.c  format.h  pattern.c
